docs/generated/2.0-b10/Classnames.md

## API\Request
## Archive
## ArchiveProcessor
## ArchiveProcessor\Parameters
## Common
## Config
## DataAccess\LogAggregator
## DataTable
## DataTable\Filter
## DataTable\Filter\AddColumnsProcessedMetrics
## DataTable\Filter\AddColumnsProcessedMetricsGoal
## DataTable\Filter\AddSummaryRow
## DataTable\Filter\BeautifyRangeLabels
## DataTable\Filter\BeautifyTimeRangeLabels
## DataTable\Filter\CalculateEvolutionFilter
## DataTable\Filter\ColumnCallbackAddColumn
## DataTable\Filter\ColumnCallbackAddColumnPercentage
## DataTable\Filter\ColumnCallbackAddColumnQuotient
## DataTable\Filter\ColumnCallbackAddMetadata
## DataTable\Filter\ColumnCallbackDeleteRow
## DataTable\Filter\ColumnDelete
## DataTable\Filter\ExcludeLowPopulation
## DataTable\Filter\GroupBy
## DataTable\Filter\Limit
## DataTable\Filter\MetadataCallbackAddMetadata
## DataTable\Filter\MetadataCallbackReplace
## DataTable\Filter\Pattern
## DataTable\Filter\PatternRecursive
## DataTable\Filter\ReplaceColumnNames
## DataTable\Filter\ReplaceSummaryRowLabel
## DataTable\Filter\Sort
## DataTable\Filter\Truncate
## DataTable\Map
## DataTable\Row
## DataTable\Simple
## Date
## Db
## Filesystem
## FrontController
## Http
## IP
## Log
## Mail
## Menu\MenuAbstract
## Menu\MenuAdmin
## Menu\MenuMain
## Menu\MenuTop
## Metrics
## MetricsFormatter
## Nonce
## Notification
## Notification\Manager
## Option
## Period
## Period\Range
## Piwik
## Plugin
## Plugin\API
## Plugin\Archiver
## Plugin\Controller
## Plugin\Manager
## Plugin\Settings
## Plugin\ViewDataTable
## Plugin\Visualization
## Plugins\Actions\Archiver
## Plugins\CoreVisualizations\Visualizations\Cloud
## Plugins\CoreVisualizations\Visualizations\Graph
## Plugins\CoreVisualizations\Visualizations\HtmlTable
## Plugins\CoreVisualizations\Visualizations\HtmlTable\AllColumns
## Plugins\CoreVisualizations\Visualizations\JqplotGraph
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Bar
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Evolution
## Plugins\CoreVisualizations\Visualizations\JqplotGraph\Pie
## Plugins\CustomVariables\Archiver
## Plugins\DevicesDetection\Archiver
## Plugins\ExampleVisualization\SimpleTable
## Plugins\Goals\Archiver
## Plugins\Goals\Visualizations\Goals
## Plugins\Live\VisitorLog
## Plugins\Provider\Archiver
## Plugins\Referrers\Archiver
## Plugins\UserCountry\Archiver
## Plugins\UserSettings\Archiver
## Plugins\VisitTime\Archiver
## Plugins\VisitorInterest\Archiver
## RankingQuery
## ScheduledTask
## ScheduledTime
## ScheduledTime\Daily
## ScheduledTime\Hourly
## ScheduledTime\Monthly
## ScheduledTime\Weekly
## Segment
## SettingsPiwik
## SettingsServer
## Settings\Setting
## Settings\SystemSetting
## Settings\UserSetting
## Singleton
## Site
## TaskScheduler
## Url
## UrlHelper
## Version
## View
## ViewDataTable\Config
## ViewDataTable\Factory
## ViewDataTable\RequestConfig
## WidgetsList
